# addonfactory-ucc-generator

./: .addonmatrix  .appinspect_api.expect.yaml  .coveragerc  .flake8  .fortifyrc  .fossa.yml  .gitattributes  .gitignore  .gitmodules  .jscpd.json  .licenserc.yaml  .markdownlint.yaml  .markdownlintignore  .ort.yml  .pre-commit-config.yaml  .python-version  .releaserc  .semgrepignore  .ucc-ui-version  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-splunk  NOTICE  README.md  bower.json  build-ui.sh  build.config.dev.js  build.config.js  build.json  build.py  docker-compose.yml  get-ucc-ui.sh  globalConfig.js  globalConfig.json  index.html  karma.conf.js  local_refresh.sh  (+22 more)
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/: .bower.json  .eslintrc.js  .eslintrc.test.js  .jshintignore  .jshintrc  .jshintrc_pre_bubbles  CMakeLists.txt  Gruntfile.js  README.md  allJsDocConf.json  bower.json  build.js  build_core_js_pages.js  build_splunkjs.js  ci_ui_integration.sh  ci_ui_runner.js  jsdocConf.json  node.cmd  npm-shrinkwrap.json  package.json  publicJsDocConf.json  update_javascript_sdk.py
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/app_templates/sample_app/default/: app.conf
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/: build.js  constants.js  generateWpDependencies.js  modtree.js  tasks.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/plugins/: SplunkDashboardExtensionOutputPlugin.js  SplunkLayoutUMDTemplateReplacementPlugin.js  SplunkNameModuleIdsPlugin.js  SplunkOmitAssetsPlugin.js  SplunkWebpackSandboxPlugin.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/postcss_plugins/splunk-postcss-mixin-class/: index.js  package.json
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/postcss_plugins/splunk-postcss-theme-import/: index.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/profiles/: anachronistic.config.js  css_base_enterprise.config.js  css_base_lite.config.js  css_dmc.config.js  css_legacy.config.js  css_legacy_skin.config.js  css_splunk_components_enterprise.config.js  css_splunk_components_lite.config.js  css_splunkjs.config.js  jscharting.config.js  layout.config.js  modules_nav_enterprise.config.js  modules_nav_enterprise.prod.js  modules_nav_lite.config.js  pages_enterprise.config.js  pages_lite.config.js  pdf_mapping.config.js  simplexml.config.js  single_value.config.js  splunk_visualization.config.js  splunkjs_dj.config.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/profiles/common/: appBase.config.js  appPages.config.js  coreAliases.config.js  css.config.js  css_base.config.js  (+9 more)
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/util/: getPathTemplate.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/build_tools/web_loaders/: splunk-es6-polyfill-loader.js  splunk-highcharts-no-conflict-loader.js  splunk-module-id-loader.js  splunk-public-path-injection-loader.js  splunk-require-to-define-loader.js  virtual-module-loader.js  virtual-module-template.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/docs/: style-guide-react.md  style-guide.md
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/grunt_reporters/: jshint-junit-reporter.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/grunt_tasks/: jshint_post_report.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/grunt_tasks/helpers/: junit.js  splunk.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/pdf/: genmapsvg.js  gensinglevalue.js  gensvg.js  i18n.js  node_charting.js  node_mapping.js  node_singlevalue.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/scripts/: build-splunkjs-independent.js  config-ui.js  symlink-ui.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/search_mrsparkle/: README.txt
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/search_mrsparkle/exposed/: README.txt
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/search_mrsparkle/modules/: AbstractModule.conf  AbstractModule.js  DispatchingModule.conf  DispatchingModule.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/search_mrsparkle/templates/: formset.html  lib.html
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/splunkjs_independent/: README.md
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/splunkjs_independent/assets/: readme.md.tmpl
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/splunkjs_independent/tests/: test_basic_views.html  test_basic_views_min.html  test_chart.html  test_cors.html  test_cors_function.html  test_drilldown.html  test_error.html  test_eventsviewer.html  test_fileprotocol.html  test_login.html  test_login_form.html  test_login_form_landing.html  test_login_function.html  test_login_min.html  test_map.html  test_map_min.html  test_mode_configuration.html  test_move_static.html  test_reauth.html  test_reauth_function.html  test_searchbar.html  test_timeline.html  test_timerangeview.html  test_username.html  tests_index.html
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/test/: bootstrap-helpers.js  clean_corejs_test.sh  coverage-plugin.js  i18n.js  karma.conf.js  performance-reporter.js  test-bootstrap-loader.js  test-bootstrap.es  test-helpers.js  webpack-plugin.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/test/compilation/: MockModulePlugin.js  child-log.js  es5-coverage-instrumenter-loader.js  es6-coverage-instrumenter-plugin.js  redefine-parser-loader.js  register-hooks-builder.js  webpack-compilation.js
splunk_add_on_ucc_framework/UCC-UI-lib/bower_components/SplunkWebCore/test/verification/: karma.conf.js
(+10422 files in other folders)
