#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "splunk_add_on_ucc_framework"
version = "5.9.0"
description = "Splunk Add-on SDK formerly UCC is a build and code generation framework"
license = "Apache-2.0"
authors = ["Splunk <addonfactory@splunk.com>"]
include = ["NOTICE"]
readme = "README.md"
repository = "https://github.com/splunk/addonfactory-ucc-generator"
homepage = "https://github.com/splunk/addonfactory-ucc-generator"
keywords = ["splunk"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = ">=2,<4"
defusedxml = "^0.7.1"
jsonschema = "^4.1.2"
dunamai = "1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
coverage = "^6.1"
parameterized = "^0.8.1"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
ucc-gen="splunk_add_on_ucc_framework:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
