#
# Copyright 2024 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "splunk_add_on_ucc_framework"
version = "5.39.1"
description = "Splunk Add-on SDK formerly UCC is a build and code generation framework"
license = "Apache-2.0"
authors = ["Splunk <addonfactory@splunk.com>"]
include = ["NOTICE", "splunk_add_on_ucc_framework/package/appserver/**/*"]
readme = "README.md"
homepage = "https://github.com/splunk/addonfactory-ucc-generator"
repository = "https://github.com/splunk/addonfactory-ucc-generator"
documentation = "https://splunk.github.io/addonfactory-ucc-generator"
keywords = ["splunk", "ucc"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/splunk/addonfactory-ucc-generator/issues"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = ">=2,<4"
addonfactory-splunk-conf-parser-lib = "*"
dunamai = "^1.9.0"
jsonschema = "^4.4.0"
PyYAML = "^6.0"
openapi3 = "^1.7.0"
defusedxml = "^0.7.1"
requests = "^2.31.0"
urllib3 = "<2"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
importlib-metadata = {version="*", python="<3.8"}
pytest = "^7.2.1"
pytest-splunk-addon = "^5.0.0"
pytest-splunk-addon-ui-smartx = "3.0.1"
pytest-rerunfailures = "^11.1.1"
mkdocs-material = "^9.1.3"
pytest-cov = "^4.0.0"
covdefaults = "^2.3.0"
xmldiff = "^2.6.3"

[tool.poetry.scripts]
ucc-gen="splunk_add_on_ucc_framework.main:main"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
